samples/_failures_safe/1761040016_e404fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f358319a.c: In function ‘main’:
./samples/SAFE/__tmp_f358319a.c:157:21: error: expected ‘;’ at end of input
  157 |             continue
      |                     ^
      |                     ;
./samples/SAFE/__tmp_f358319a.c:157:13: error: expected declaration or statement at end of input
  157 |             continue
      |             ^~~~~~~~
./samples/SAFE/__tmp_f358319a.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f358319a.c:157:13: error: expected declaration or statement at end of input
